# ucltp

./: CRF++-0.58.rar  README.md
data/ner/date/: dict  regexp
data/ner/number/: dict  regexp
src/: Makefile.am  README  configure.ac  type.h
src/config/: .Makefile.swp  .config.cpp.swp  .test.cpp.swp  Makefile.am  config.cpp  config.h
src/cws/: cws.conf  cws.cpp  cws.h
src/dat/: Makefile.am  README.md  dat.cpp  dat.h
src/dat/test/: Makefile.am  dict  test_dat.cpp
src/ner/: Makefile.am  README.md  entity.h
src/ner/date/: Makefile.am  date.cpp  date.h
src/ner/date/test/: Makefile.am  test_date.cpp
src/ner/number/: Makefile.am  number.cpp  number.h
src/ner/number/test/: Makefile.am  test_number.cpp
src/sre/: Makefile.am  README.md  sre.cpp  sre.h
src/sre/test/: Makefile.am  regexp  test_sre.cpp
src/util/: Makefile.am  util.cpp  util.h
